--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #postgres DB
 PGUSER=postgres
 PGPASSWORD=123456789
-PGHOST=cybersuccess.cru6ggycek5h.ap-south-1.rds.amazonaws.com
+PGHOST=sfas.cru6ggycek5h.ap-south-1.rds.amazonaws.com
 PGPORT=5432
 PGDATABASE=cybersuccess
 
